fix(components): make selected option of language switch uppercase on mobile if type is `language`

--- a/packages/components/src/components/post-language-switch/post-language-switch.scss
+++ b/packages/components/src/components/post-language-switch/post-language-switch.scss
@@ -31,6 +31,7 @@ tokens.$default-map: components.$post-button;
   > span {
     padding-inline: 0;
     width: 40px;
+    text-transform: uppercase;
   }
 
   .post-language-switch-trigger {
